# neoloud

./: .clang-format  .git-blame-ignore-revs  .gitignore  AUTHORS  CMakeLists.txt  CONTRIBUTING  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md
cmake/: SoLoudConfig.cmake.in  soloud.pc.in
demos/glue/cs/: hello.cs
include/: soloud.h  soloud_audiosource.h  soloud_audiosource3d.h  soloud_ay.h  soloud_bassboostfilter.h  soloud_biquadresonantfilter.h  soloud_bus.h  soloud_c.h  soloud_config.h  soloud_dcremovalfilter.h  soloud_duckfilter.h  soloud_echofilter.h  soloud_eqfilter.h  soloud_error.h  soloud_fader.h  soloud_fft.h  soloud_fftfilter.h  soloud_file.h  soloud_file_hack_off.h  soloud_file_hack_on.h  soloud_filter.h  soloud_flangerfilter.h  soloud_freeverbfilter.h  soloud_internal.h  soloud_intrin.h  soloud_ll_mixing.h  soloud_lofifilter.h  soloud_misc.h  soloud_monotone.h  soloud_noise.h  soloud_openmpt.h  soloud_queue.h  soloud_robotizefilter.h  soloud_sfxr.h  soloud_speech.h  soloud_tedsid.h  soloud_thread.h  soloud_vic.h  soloud_vizsn.h  soloud_wav.h  (+3 more)
outdated-misc/docsrc/: downloads.mmd
outdated-misc/scripts/: makerel.py
src/audiosource/ay/: chipplayer.cpp  chipplayer.h  sndbuffer.cpp  sndbuffer.h  sndchip.cpp  sndchip.h  sndrender.cpp  sndrender.h  soloud_ay.cpp
src/audiosource/monotone/: soloud_monotone.cpp
src/audiosource/noise/: soloud_noise.cpp
src/audiosource/openmpt/: soloud_openmpt.cpp  soloud_openmpt_dll.c
src/audiosource/sfxr/: soloud_sfxr.cpp
src/audiosource/speech/: darray.cpp  darray.h  klatt.cpp  klatt.h  resonator.cpp  resonator.h  soloud_speech.cpp  tts.cpp  tts.h
src/audiosource/tedsid/: sid.cpp  sid.h  soloud_tedsid.cpp  ted.cpp  ted.h
src/audiosource/vic/: soloud_vic.cpp
src/audiosource/vizsn/: soloud_vizsn.cpp
src/audiosource/wav/: soloud_ffmpeg.cpp  soloud_ffmpeg.h  soloud_ffmpeg_load.cpp  soloud_ffmpeg_load.h  soloud_mpg123.cpp  soloud_mpg123.h  soloud_wav.cpp  soloud_wavstream.cpp
src/backend/miniaudio/: miniaudio.h  soloud_miniaudio.cpp
src/backend/nosound/: soloud_nosound.cpp
src/backend/null/: soloud_null.cpp
src/backend/sdl3/: soloud_sdl3.cpp
src/backend/sdl3_static/: soloud_sdl3_static.cpp
src/c_api/: soloud_c.cpp
src/core/: soloud.cpp  soloud_audiosource.cpp  soloud_bus.cpp  soloud_core_3d.cpp  soloud_core_basicops.cpp  soloud_core_faderops.cpp  soloud_core_filterops.cpp  soloud_core_getters.cpp  soloud_core_setters.cpp  soloud_core_voicegroup.cpp  soloud_core_voiceops.cpp  soloud_fader.cpp  soloud_fft.cpp  soloud_fft_lut.cpp  soloud_file.cpp  soloud_filter.cpp  soloud_intrin.cpp  soloud_log.cpp  soloud_misc.cpp  soloud_mixing.cpp  soloud_mixing_internal.h  soloud_queue.cpp  soloud_thread.cpp
src/filter/: soloud_bassboostfilter.cpp  soloud_biquadresonantfilter.cpp  soloud_dcremovalfilter.cpp  soloud_duckfilter.cpp  soloud_echofilter.cpp  soloud_eqfilter.cpp  soloud_fftfilter.cpp  soloud_flangerfilter.cpp  soloud_freeverbfilter.cpp  soloud_lofifilter.cpp  soloud_robotizefilter.cpp  soloud_waveshaperfilter.cpp
src/intrin/: soloud_cpu.cpp  soloud_cpu.h  soloud_intrin_misc.cpp
src/intrin/avx/: soloud_mixing_avx.cpp
src/intrin/sse/: soloud_misc_sse.cpp  soloud_mixing_sse.cpp
src/tests/sanity/: sanity.cpp
src/tools/codegen/: main.cpp
